# sync-2-cloud

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: build-windows.yml  build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: admin.rs  commands.rs  crypto.rs  keychain.rs  lib.rs  main.rs  s3_client.rs  secrets.example.rs  sync_engine.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: KeyEntry.tsx  Progress.tsx  SyncPanel.tsx
src/lib/: store.ts  tauri.ts  types.ts
